Fix alignment of flag icons

--- a/src/styles/content/featured.less
+++ b/src/styles/content/featured.less
@@ -28,9 +28,8 @@
 			margin-top: 0;
 
 			> .flag-icon {
-				float: left;
-				margin: .4em .5em 0 0;
-				font-size: 1rem;
+				margin: 0 .25em 0 0;
+				font-size: .85em;
 			}
 		}
 
