--- a/src/styles/content/list.less
+++ b/src/styles/content/list.less
@@ -79,6 +79,7 @@
 
 	> header {
 		display: flex;
+		align-items: center;
 		padding: .25em 0;
 
 		> i {
