--- a/src/styles/content/watching.less
+++ b/src/styles/content/watching.less
@@ -35,9 +35,8 @@
 			margin: 0;
 
 			> .flag-icon {
-				float: left;
-				margin: .4em .5em 0 0;
-				font-size: 1rem;
+				margin: 0 .25em 0 0;
+				font-size: .85em;
 			}
 		}
 
